<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_name">Login</string>
    <string name="pass_text">Password</string>
    <string name="whatDoesThisDo">What does this do?</string>
    <string name="raddioButton">Radio Button</string>
    <string name="checkBox">CheckBox</string>
    <string name="login_Button">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dialog_message">Would you like to finish activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="switchON">Switch ON</string>
    <string name="switchOFF">Switch Off</string>
    <string name="Information">My information to share</string>
    <string name="startChat">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="chatHint">Type to Chat</string>
    <string name="newText">new text</string>
    <string name="contentDescription">pic</string>
    <string name="startWeather">Weather</string>
    <string name="currentTemp">Current</string>
    <string name="lowTemp">Low</string>
    <string name="maxTemp">High</string>
    <string name="windSpeed">Wind</string>


</resources>
