<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/Buttonitems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/raddioButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_columnWeight="1"
        android:contentDescription="@string/checkBox"
        android:gravity="fill"
        android:text="@string/checkBox"/>


    <Switch
        android:id="@+id/switchSlider"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/whatDoesThisDo"/>

    <ImageButton
        android:id="@+id/imageItems"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />


</GridLayout>